New service to get the mode of operation

--- a/ethercat_controller_msgs/CMakeLists.txt
+++ b/ethercat_controller_msgs/CMakeLists.txt
@@ -14,6 +14,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/SwitchDriveModeOfOperation.srv"
   "srv/ResetDriveFault.srv"
   "srv/SetDriveStates.srv"
+  "srv/GetModesOfOperation.srv"
   DEPENDENCIES
   std_msgs
 )
